--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -1,30 +1,30 @@
-body,head{
+* {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 16 px;
 }
 
-p{
-    color:#555;
+p {
+    color: #555;
 }
 
-#primero p{
-    color:#369;
+#primero p {
+    color: #369;
 }
 
-a{
-color: #C30;
+a {
+    color: #C30
 }
 
-#primero em{
+#primero em {
     color: #0000BB;
     background-color: #FFFFCC;
 }
 
-em.especial{
+em.especial {
     color: #FFFF00;
     background: #000000;
 }
 
-.normal espan{
+.normal span {
     font-weight: bold;
 }
